# JARVIS

./: .gitignore  Dockerfile  claude.md  jarvis_master_plan_v5.md  pyproject.toml
.claude/: settings.local.json
configs/: deployment.yaml  ds_zero3.json  inference.yaml  models.yaml  router.yaml  swebench_vllm.yaml
data/: physics_corpus.json
docs/: API_SPEC.md  ARCHITECTURE.md  BRAINSTORM.md  CODEAGENT_INTEGRATION.md  DEPLOYMENT.md  MODELS.md  ROADMAP.md  TRAINING_PIPELINE.md
scripts/: archive_v4_to_ssd.ps1  aria_prototype.py  check_traces.py  debug_livecode.py  diagnose_eval.py  diagnose_eval_v2.py  diagnose_phase4.sh  diagnose_swebench.py  download_models.sh  download_qwen35.sh  finish_physics_filter.sh  inspect_correctness_bug.sh  launch_dashboard.sh  probe_toolcall.sh  run_aria_eval.sh  run_code_trace_generation.sh  run_eval_all.sh  run_hep_sft.sh  run_phase4_prep.sh  run_physics_sft.sh  run_swebench.sh  run_swebench_mini.sh  run_trace_generation.sh  run_vllm_compat.sh  run_vllm_tooluse.sh  test_delta.sh  training_status.sh  validate_extractor_fix.sh
src/jarvis/: __init__.py  __main__.py  config.py
tests/: conftest.py  test_api.py  test_brains.py  test_cli.py  test_config.py  test_inference.py  test_rag.py  test_router.py  test_specialists.py
tests/tooluse/: test_anthropic_smoke.py  test_anthropic_translate.py  test_smoke.py
training/data/: build_code_problems.py  build_physics_problems.py  download_benchmarks.py  extract_hep_code.py  extract_hep_physics.py  generate_router_data.py
training/eval/: base.py  run_aime.py  run_gpqa.py  run_livecode.py  (+3 more)
(+40 files in other folders)
